--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,81 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/waterButton"
+        android:layout_width="200dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="260dp"
+        android:onClick="clickButton"
+        android:text="Start Tracking"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/waterButton3"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="8dp"
+        android:text="Stop Tracking"
+        app:layout_constraintEnd_toEndOf="@+id/waterButton"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/waterButton"
+        app:layout_constraintTop_toBottomOf="@+id/waterButton" />
+
     <TextView
+        android:id="@+id/waterStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginTop="66dp"
+        android:layout_marginBottom="286dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/waterButton3" />
+
+    <EditText
+        android:id="@+id/longtitudeInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="24dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/waterButton"
+        app:layout_constraintStart_toStartOf="@+id/latitudeInput"
+        app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />
+
+    <EditText
+        android:id="@+id/latitudeInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="122dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:text="Latitude"
+        app:layout_constraintBottom_toBottomOf="@+id/latitudeInput"
+        app:layout_constraintEnd_toStartOf="@+id/latitudeInput" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:text="Longtitude"
+        app:layout_constraintBottom_toBottomOf="@+id/longtitudeInput"
+        app:layout_constraintEnd_toStartOf="@+id/longtitudeInput" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
