--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <Button
@@ -18,69 +19,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/waterButton3"
-        android:layout_width="0dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="8dp"
-        android:text="Stop Tracking"
-        app:layout_constraintEnd_toEndOf="@+id/waterButton"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/waterButton"
-        app:layout_constraintTop_toBottomOf="@+id/waterButton" />
-
     <TextView
-        android:id="@+id/waterStatus"
+        android:id="@+id/trackingStatus"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="66dp"
-        android:layout_marginBottom="254dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="360dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/waterButton3" />
+        app:layout_constraintTop_toBottomOf="@+id/waterButton" />
 
-    <EditText
-        android:id="@+id/longtitudeInput"
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/waterButton"
-        app:layout_constraintStart_toStartOf="@+id/latitudeInput"
-        app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />
-
-    <EditText
-        android:id="@+id/latitudeInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="122dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/ElapsedTime"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/elapsedTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
-        android:text="Latitude"
-        app:layout_constraintBottom_toBottomOf="@+id/latitudeInput"
-        app:layout_constraintEnd_toStartOf="@+id/latitudeInput" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
-        android:text="Longtitude"
-        app:layout_constraintBottom_toBottomOf="@+id/longtitudeInput"
-        app:layout_constraintEnd_toStartOf="@+id/longtitudeInput" />
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
